--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>ThermoLive</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'styles.css' %}">
     </head>
     <body>
